@@ -1,3 +1,8 @@
+2002-05-22  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-multipart.c (multipart_write_to_stream): Avoid adding an
+	extranious newline character when a preface doesn't exist.
+
 2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-part.c (g_mime_part_set_content_md5): Fix some compiler
